arcion/1.ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: arcion
  labels:
    name: arcion
