arcion/8.StatefulSet.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: arcion-compute
  namespace: arcion
spec:
  serviceName: "arcion-compute"
  replicas: 2
  selector:
    matchLabels:
      app: arcion-compute
  template:
    metadata:
      labels:
        app: arcion-compute
    spec:
      volumes:
        - name: license
          configMap:
            name: arcion-license
            items:
              - key: "replicant.lic"
                path: "replicant.lic"
        # - name: bootstrap
        #   configMap:
        #     name: arcion-bootstrap-script
      containers:
        - name: arcion-compute
          image: arcionlabs/replicant-on-premises:20231031.1
          ports:
            - containerPort: 8080
              name: console-port
          resources:
            requests:
              memory: "1Gi"
              cpu: "2"
            limits:
              memory: "1Gi"
              cpu: "2"
          command:
            - /bin/bash
            - -c
          args:
            - python3 bootstrap.py
          volumeMounts:
            - name: arcion-data
              mountPath: /data
            - name: license
              mountPath: /config
            # - name: bootstrap
            #   mountPath: /arcion/bootstrap.py
            #   subPath: bootstrap.py
  volumeClaimTemplates:
    - metadata:
        name: arcion-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
