arcion/4.postgresql.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: arcion
  name: postgres # Sets Deployment name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              memory: "2Gi"
              cpu: "2"
            limits:
              memory: "2Gi"
              cpu: "2"
          ports:
            - containerPort: 5432
              name: postgres-np
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: arcion
spec:
  selector:
    app: postgres
  ports:
    - name: postgres-np
      protocol: TCP
      port: 5432
      targetPort: postgres-np
