arcion/6.Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: arcion
  name: arcion-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arcion-ui
  template:
    metadata:
      labels:
        app: arcion-ui
    spec:
      volumes:
        - name: libs
          persistentVolumeClaim:
            claimName: filebrowser-pvc
        - name: arcion-data
          persistentVolumeClaim:
            claimName: arcion-pvc
        - name: license
          configMap:
            name: arcion-license
            items:
              - key: "replicant.lic"
                path: "replicant.lic"
      containers:
        - name: arcion-ui
          image: bnh/arcion-replicant:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: console-port
          resources:
            requests:
              memory: "4Gi"
              cpu: "2"
            limits:
              memory: "4Gi"
              cpu: "2"
          command:
            - /bin/bash
            - -c
          args:
            - python3 bootstrap.py
          volumeMounts:
            - name: arcion-data
              mountPath: /data
            - name: license
              mountPath: /config
            - name: libs
              mountPath: /libs

---
apiVersion: v1
kind: Service
metadata:
  name: arcion-ui
  namespace: arcion
spec:
  selector:
    app: arcion-ui
  ports:
    - name: console-port
      protocol: TCP
      port: 8080
      targetPort: console-port
